--- a/flutter_google_places_sdk/example/android/app/build.gradle
+++ b/flutter_google_places_sdk/example/android/app/build.gradle
@@ -26,7 +26,9 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
-    compileSdkVersion 33
+    namespace "com.msh.flutter_google_places_sdk_example"
+    
+    compileSdkVersion 34
     ndkVersion "21.4.7075529"
 
     compileOptions {
